<resources>
    <string name="app_name">Mouseguard Sheet Manager</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="login">Log in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must not be blank</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_account">Create an account</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="prompt_userName">Username</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="sheets">Sheets</string>
    <string name="join">Join</string>
    <string name="createGame">Create game</string>
    <string name="gameName">Game name: %1$s</string>
    <string name="playerNumber">Player number: %1$s</string>
    <string name="gameUID">Game\'s ID: %1$s</string>
    <string name="masterName">Master\'s name: %1$s</string>
    <string name="character_name">Character name</string>
    <string name="character_second_name">Character second name</string>
    <string name="stats">Stats</string>
    <string name="add_character_pic">Character picture</string>
    <string name="confirm_sheet">Confirm sheet</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="yellow">Yellow</string>
    <string name="black">Black</string>
    <string name="confirm_stats">Confirm Stats</string>
    <string name="stat_name">Stat name</string>
    <string name="stat_value">Stat value</string>
    <string name="create_sheet">Create sheet</string>
    <string name="mantle_color">Mantle color: %1$s</string>
    <string name="characterName">Character name:  %1$s</string>
    <string name="mantleColor">Mantle color:</string>
    <string name="failed_to_join">Failed to join!</string>
    <string name="shareGame">Share game</string>
    <string name="add_sheet">Add sheet</string>
</resources>