<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/burntPaper"
    tools:context=".SheetEditActivity">

    <ImageView
        android:id="@+id/characterPicImageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/charNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/character_name"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/characterPicImageView"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_horizontal"
        />

    <EditText
        android:id="@+id/charSecondNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/character_second_name"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/charNameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_horizontal"
        />

    <TextView
        android:id="@+id/mantleColorText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/mantleColor"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/charSecondNameEditText"
        />


    <Spinner
        android:id="@+id/mantleColorSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintTop_toBottomOf="@+id/charSecondNameEditText"
        app:layout_constraintStart_toEndOf="@+id/mantleColorText"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/statsButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintBottom_toTopOf="@id/characterPicButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/stats"
        android:onClick="openStats"
        />

    <Button
        android:id="@+id/characterPicButton"
        android:hint="@string/add_character_pic"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/confirmSheetButton"
        android:onClick="addCharacterPic"
        />

    <Button
        android:id="@+id/confirmSheetButton"
        android:hint="@string/confirm_sheet"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/characterPicButton"
        android:onClick="confirmSheet"
        />

</androidx.constraintlayout.widget.ConstraintLayout>